<resources>
    <string name="app_name">HandyManFlexpartServer</string>
    <string name="title_activity_ui">ui</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_category">Categories</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_order"> Orders</string>
    <string name="menu_sign_out"> Sign Out</string>
    <string name="menu_best_deals"> Best Deals</string>
    <string name="menu_most_popular"> Most Popular </string>
    <string name="action_search"> Search</string>
    <string name="action_filter"> Filter</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_map">Map</string>
</resources>