<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_service"
            android:title="@string/menu_category" />
    </group>


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_best_deals"
            android:icon="@drawable/ic_baseline_stars_24"
            android:title="@string/menu_best_deals" />
    </group>


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/ic_baseline_local_fire_department_24"
            android:title="@string/menu_most_popular" />
    </group>




    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/menu_order" />
    </group>



    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_sign_out" />
    </group>

</menu>