<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_category">

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.handymanflexpartserver.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_service_list"
        android:name="com.example.handymanflexpartserver.ui.services_list.ServiceListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list" >


   <action android:id="@+id/clear_baclstack"
       app:launchSingleTop="true"
       app:popUpTo="@+id/nav_category"
       app:popUpToInclusive="true" />


    </fragment>




    <fragment
        android:id="@+id/nav_best_deals"
        android:name="com.example.handymanflexpartserver.ui.best_deals.BestDealsFragment"
        android:label="@string/menu_best_deals"
        tools:layout="@layout/best_deals_fragment" >


        <action android:id="@+id/clear_baclstack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true" />


    </fragment>





    <fragment
        android:id="@+id/nav_most_popular"
        android:name="com.example.handymanflexpartserver.ui.most_popular.MostPopularFragment"
        android:label="@string/menu_most_popular"
        tools:layout="@layout/most_popular_fragment" >


        <action android:id="@+id/clear_baclstack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true" />


    </fragment>







    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.handymanflexpartserver.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" >


        <action android:id="@+id/clearBackstack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true" />



    </fragment>



</navigation>